--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,7 @@ target/
 *.xtendbin
 *._trace
 
-
-# Eclipse Core      
-.project
 .settings/
+
 # JDT-specific (Eclipse Java Development Tools)     
-.classpath
+# .classpath
